--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-block">
+                <div class="navbar__logo">
+                    <img src="img/logo.png" alt="Логотип">
+                </div>
+                <!-- /.navbar__logo -->
+                <div class="navbar__info">
+                    <div class="navbar__contacts">
+                        <span class="navbar__address">Калуга, Москва, МО</span>
+                        <a href="+74954225131" class="navbar__phone">+7 (495) 42-251-31</a>
+                    </div>
+                    <!-- /.navbar__contacts -->
+                    <button class="button navbar__button">Перезвоните мне</button>
+                    <!-- /.button navbar__button -->
+                </div>
+                <!-- /.navbar__info -->
+            </div>
+            <!-- /.navbar-block -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!-- /.navbar -->
 </body>
 </html>
