--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <title>Document</title>
 </head>
 <body>
@@ -37,7 +38,7 @@
             <div class="container">
                 <div class="hero-block">
                     <div class="hero-text">
-                        <h1 class="hero-text__title">Внутренняя отделька помещений "под ключ"</h1>
+                        <h1 class="hero-text__title">Внутренняя отделка помещений "под ключ"</h1>
                         <span class="hero-text__subtitle">с гарантией качества, прописанной в договоре</span>
                         <ul class="hero-list">
                             <li class="hero-list__item">
