Сверстан и адаптирован блок с предложением

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,32 @@
             <!-- /.container -->
         </section>
         <!-- /.hero -->
+        <section class="offer">
+            <div class="container">
+                <div class="offer-block">
+                    <h2 class="offer__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</h2>
+                    <!-- /.section-title -->
+                    <span class="offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
+                    <!-- /.section-subtitle -->
+                    <form action="" class="form offer__form">
+                        <input type="text" class="input offer__input" placeholder="Ваше имя">
+                        <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+                        <button class="button offer__button">Получить бесплатный дизайн-проект</button>
+                    </form>
+                    <div class="offer__ref">
+                        <div class="offer__text">Наш менеджер перезвонит вам в течение 60 секунд</div>
+                        <!-- /.offer__text -->
+                        <div class="offer__text">или перезвоните нам сами <a href="tel:+7495425131" class="offer__phone">+7 (495) 54-251-31</a></div>
+                        <!-- /.offer__num -->
+                    </div>
+                    <!-- /.offer__ref -->
+                    <!-- /.form offer-form -->
+                </div>
+                <!-- /.offer-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.offer -->
     </main>
 </body>
 </html>
