--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                                 <div class="hero-list__image">
                                     <img src="img/icons/calculator.png" alt="calculator">
                                 </div>
-                                <span class="hero-list__text">Рассчитаем смету работы и материалы в день обращения</span>
+                                <span class="hero-list__text">Рассчитаем смету на работы <br> и материалы в день обращения</span>
                             </li>
                             <li class="hero-list__item">
                                 <div class="hero-list__image">
@@ -85,9 +85,9 @@
                         <button class="button offer__button">Получить бесплатный дизайн-проект</button>
                     </form>
                     <div class="offer__ref">
-                        <div class="offer__text">Наш менеджер перезвонит вам в течение 60 секунд</div>
+                        <div class="offer__text">Наш менеджер перезвонит Вам в течение 60 секунд</div>
                         <!-- /.offer__text -->
-                        <div class="offer__text">или перезвоните нам сами <a href="tel:+7495425131" class="offer__phone">+7 (495) 54-251-31</a></div>
+                        <div class="offer__text">или перезвоните нам сами <br> <a href="tel:+74954225131" class="offer__phone">+7 (495) 42-251-31</a></div>
                         <!-- /.offer__num -->
                     </div>
                     <!-- /.offer__ref -->
