--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                         <a href="+74954225131" class="navbar__phone">+7 (495) 42-251-31</a>
                     </div>
                     <!-- /.navbar__contacts -->
-                    <button class="button navbar__button">Перезвоните мне</button>
+                    <button class="button navbar__button" id="button">Перезвоните мне</button>
                     <!-- /.button navbar__button -->
                 </div>
                 <!-- /.navbar__info -->
@@ -99,5 +99,16 @@
         </section>
         <!-- /.offer -->
     </main>
+    <div class="modal" id="modal">
+        <div class="modal-dialog">
+            <button class="modal-dialog__close" id="close">&times;</button>
+            <!-- /.modal-dialog__close -->
+            <h4 class="modal-dialog__title">Модальное окно</h4>
+            <!-- /.modal-dialog__title -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+    <script src="js/main.js"></script>
 </body>
 </html>
