Сверстано адаптивное модальное окно

--- a/src/index.html
+++ b/src/index.html
@@ -103,12 +103,95 @@
         <div class="modal-dialog">
             <button class="modal-dialog__close" id="close">&times;</button>
             <!-- /.modal-dialog__close -->
-            <h4 class="modal-dialog__title">Модальное окно</h4>
-            <!-- /.modal-dialog__title -->
+            <div class="modal-dialog__offers">
+                <div class="modal-offer__goods">
+                    <div class="modal-offer-good">
+                        <img src="img/popup/1.png" alt="Ванная комната" class="modal-offer-good__img">
+                        <div class="modal-offer-good__description">
+                            <h3 class="modal-offer-good__title">Ванная комната</h3>
+                            <!-- /.offer-good__title -->
+                            <div class="modal-offer-good__line"></div>
+                            <!-- /.offer-good__line -->
+                            <div class="modal-offer-good__price">135*150 - <span class="modal-offer-good__price_counts">31 000 руб.</span></div>
+                            <div class="modal-offer-good__price">170*170 - <span class="modal-offer-good__price_counts">43 000 руб.</span></div>
+                            <!-- /.offer-good__price -->
+                        </div>
+                        <!-- /.modal-offer-good__description -->
+                    </div>
+                    <!-- /.modal-offer-good -->
+                    <div class="modal-offer-good">
+                        <img src="img/popup/2.png" alt="Туалет" class="modal-offer-good__img">
+                        <div class="modal-offer-good__description">
+                            <h3 class="modal-offer-good__title">Туалет</h3>
+                            <!-- /.offer-good__title -->
+                            <div class="modal-offer-good__line"></div>
+                            <!-- /.offer-good__line -->
+                            <div class="modal-offer-good__price">135*70 - <span class="modal-offer-good__price_counts">14 000 руб.</span></div>
+                            <!-- /.offer-good__price -->
+                        </div>
+                        <!-- /.modal-offer-good__description -->
+                    </div>
+                    <!-- /.modal-offer-good -->
+                    <div class="modal-offer-good">
+                        <img src="img/popup/3.png" alt="Совмещённый санузел" class="modal-offer-good__img">
+                        <div class="modal-offer-good__description">
+                            <h3 class="modal-offer-good__title">Совмещённый санузел</h3>
+                            <!-- /.offer-good__title -->
+                            <div class="modal-offer-good__line"></div>
+                            <!-- /.offer-good__line -->
+                            <div class="modal-offer-good__price">170*210 - <span class="modal-offer-good__price_counts">54 000 руб.</span></div>
+                            <!-- /.offer-good__price -->
+                        </div>
+                        <!-- /.modal-offer-good__description -->
+                    </div>
+                    <!-- /.modal-offer-good -->
+                </div>
+                <!-- /.modal-offer__goods -->
+                <div class="modal-offer__description">
+                    <span class="modal-offer-description__text">В стоимость работ входит</span>
+                    <ul class="modal-offer__list">
+                        <li class="modal-offer-list__item">Демонтаж старого покрытия стен и пола</li>
+                        <!-- /.modal-offer-description__item -->
+                        <li class="modal-offer-list__item">Выравнивание стен гипсовыми составами</li>
+                        <!-- /.modal-offer-description__item -->
+                        <li class="modal-offer-list__item">Грунтовка стен и пола антисептиком, бетоноконтактом</li>
+                        <!-- /.modal-offer-description__item -->
+                        <li class="modal-offer-list__item">Монтаж кафельной плитки на полу и стенах</li>
+                        <!-- /.modal-offer-description__item -->
+                        <li class="modal-offer-list__item">Установка реечного или натяжного потолка, светильников</li>
+                        <!-- /.modal-offer-description__item -->
+                        <li class="modal-offer-list__item">Монтаж двери с коробкой</li>
+                        <!-- /.modal-offer-description__item -->
+                    </ul>
+                    <!-- /.modal-offer-description__list -->
+                </div>
+                <!-- /.modal-offer-description -->
+            </div>
+            <!-- /.modal-dialog__offers -->
+            <div class="modal-dialog__form">
+                <div class="modal-dialog__form-wrap">
+                    <h2 class="modal-dialog-form__title">Узнайте точную стоимость ремонта по телефону!</h2>
+                    <!-- /.modal-form__title -->
+                    <span class="modal-dialog-form__subtitle">Заполните поля ниже - мы свяжемся с Вами</span>
+                    <div class="modal-dialog-form__input-container">
+                        <input type="text" class="input modal-dialog-form__input" placeholder="Ваше имя">
+                        <input type="tel" class="input modal-dialog-form__input" placeholder="Ваш телефон">
+                    </div>
+                    <button class="button modal-dialog-form__button">Узнать стоимость</button>
+                    <!-- /.button modal-form__button -->
+                    <div class="modal-dialog-form__note">Или Вы можете перезвонить нам сами по телефону:<a href="+78182425131" class="modal-dialog-form__note_phone">+7 (8182) 42-51-31</a> <!-- /.modal-dialog-note__phone --></div>
+                    <!-- /.modal-dialog-note -->
+                </div>
+                
+            </div>
+            <!-- /.modal-dialog__form -->
+            
         </div>
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/modal.js"></script>
 </body>
 </html>
