подправлены границы popup

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                     <!-- /.section-title -->
                     <span class="offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
                     <!-- /.section-subtitle -->
-                    <form action="" class="form offer__form">
+                    <form action="" id="offer-form" class="form offer__form">
                         <input type="text" class="input offer__input" placeholder="Ваше имя">
                         <input type="tel" class="input offer__input" placeholder="Ваш телефон">
                         <button class="button offer__button">Получить бесплатный дизайн-проект</button>
@@ -193,6 +193,7 @@
     
     <!-- <script src="js/main.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
     <script src="js/modal.js"></script>
 </body>
 </html>
