--- a/src/index.html
+++ b/src/index.html
@@ -80,10 +80,11 @@
                     <span class="offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
                     <!-- /.section-subtitle -->
                     <form action="" id="offer-form" class="form offer__form">
-                        <input type="text" class="input offer__input" placeholder="Ваше имя">
-                        <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+                        <input type="text" name="username" class="input offer__input" placeholder="Ваше имя">
+                        <input type="tel" name="userphone" class="input offer__input" placeholder="Ваш телефон">
                         <button class="button offer__button">Получить бесплатный дизайн-проект</button>
                     </form>
+                    <div class="success"></div>
                     <div class="offer__ref">
                         <div class="offer__text">Наш менеджер перезвонит Вам в течение 60 секунд</div>
                         <!-- /.offer__text -->
