--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <title>Document</title>
@@ -80,8 +81,8 @@
                     <span class="offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
                     <!-- /.section-subtitle -->
                     <form action="" id="offer-form" class="form offer__form">
-                        <input type="text" name="username" class="input offer__input" placeholder="Ваше имя">
-                        <input type="tel" name="userphone" class="input offer__input" placeholder="Ваш телефон">
+                        <input type="text" name="username" class="input offer__input" placeholder="Ваше имя" required>
+                        <input type="tel" name="userphone" class="input offer__input" placeholder="Ваш телефон" required>
                         <button class="button offer__button">Получить бесплатный дизайн-проект</button>
                     </form>
                     <div class="success"></div>
@@ -99,6 +100,40 @@
             <!-- /.container -->
         </section>
         <!-- /.offer -->
+        <section class="section portfolio">
+            <div class="container">
+                <h2 class="portfolio__title">Работая с 2007 года, <br> мы сделали более 500 ремонтов в квартирах и домах</h2>
+                
+                <div class="slider portfolio__slider">
+                    <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-1.jpg" alt="Слайд 1"></div>
+                    <!-- /.slider-item -->
+                    <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-2.jpg" alt="Слайд 2"></div>
+                    <!-- /.slider-item -->
+                    <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-3.jpg" alt="Слайд 3"></div>
+                    <!-- /.slider-item -->
+                    <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-1.jpg" alt="Слайд 4"></div>
+                    <!-- /.slider-item -->
+                    <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-2.jpg" alt="Слайд 5"></div>
+                    <!-- /.slider-item -->
+                    <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-3.jpg" alt="Слайд 6"></div>
+                    <!-- /.slider-item -->
+                </div>
+                <!-- /.slider -->
+                <div class="arrows portfolio__arrows">
+                    <div class="arrows__left">
+                        <img src="img/portfolio/left-arrow.png" alt="">
+                    </div>
+                    <!-- /.arrows-left -->
+                    <div class="arrows__right">
+                        <img src="img/portfolio/right-arrow.png" alt="">
+                    </div>
+                    <!-- /.arrows-right -->
+                </div>
+                <!-- /.arrows -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section portfolio -->
     </main>
     <div class="modal" id="modal">
         <div class="modal-dialog">
@@ -196,5 +231,34 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.slider').slick({
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                prevArrow: $('.arrows__left'),
+                nextArrow: $('.arrows__right'),
+                responsive:[
+                    {
+                        breakpoint: 1200,
+                        settings:
+                        {
+                            slidesToShow: 2,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 576,
+                        settings:
+                        {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
 </body>
 </html>
