--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <title>Document</title>
@@ -63,7 +64,7 @@
                         </ul>
                     </div>
                     <!-- /.hero-item -->
-                    <div class="hero-img">
+                    <div class="hero-img wow slideInRight">
                         <img src="img/hero-img.png" alt="План квартиры">
                     </div>
                     <!-- /.hero-img -->
@@ -102,9 +103,9 @@
         <!-- /.offer -->
         <section class="section portfolio">
             <div class="container">
-                <h2 class="portfolio__title">Работая с 2007 года, <br> мы сделали более 500 ремонтов в квартирах и домах</h2>
+                <h2 class="portfolio__title wow fadeInDown">Работая с 2007 года, <br> мы сделали более 500 ремонтов в квартирах и домах</h2>
                 
-                <div class="slider portfolio__slider">
+                <div class="slider portfolio__slider wow fadeInDown" data-wow-delay="0.5s">
                     <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-1.jpg" alt="Слайд 1"></div>
                     <!-- /.slider-item -->
                     <div class="slider-item"><img class="slider-item__img" src="img/portfolio/slide-2.jpg" alt="Слайд 2"></div>
@@ -134,6 +135,163 @@
             <!-- /.container -->
         </section>
         <!-- /.section portfolio -->
+        <section class="section price">
+            <div class="container">
+                <h2 class="price__title">У нас очень гибкая система скидок на комплексные работы!</h2>
+                <!-- /.price-title -->
+                <span class="price__subtitle">Прайс на наши услуги</span>
+                <!-- /.price-subtitle -->
+                <div class="cards">
+                    <div class="card price__card wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="card__img">
+                            <img src="img/price/1.jpg" alt="">
+                        </div>
+                        <!-- /.card__img -->
+                        <div class="card__text">
+                            <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
+                            <!-- /.card__title -->
+                            <a href="#" class="card__link">Узнать цены</a>
+                            <!-- /.card-link -->
+                        </div>
+                        <!-- /.card__text -->
+                    </div>
+                    <!-- /.card -->
+                    <div class="card price__card wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="card__img"><img src="img/price/2.jpg" alt=""></div>
+                        <!-- /.card__img -->
+                        <div class="card__text">
+                            <h4 class="card__title">Ремонт комнат и квартир</h4>
+                            <!-- /.card__title -->
+                            <a href="#" class="card__link">Узнать цены</a>
+                            <!-- /.card-link -->
+                        </div>
+                        <!-- /.card__text -->
+                    </div>
+                    <!-- /.card -->
+                    <div class="card price__card wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="card__img"><img src="img/price/3.jpg" alt=""></div>
+                        <!-- /.card__img -->
+                        <div class="card__text">
+                            <h4 class="card__title">Отделка офисных помещений</h4>
+                            <!-- /.card__title -->
+                            <a href="#" class="card__link">Узнать цены</a>
+                            <!-- /.card-link -->
+                        </div>
+                        <!-- /.card__text -->
+                    </div>
+                    <!-- /.card -->
+                    <div class="card price__card wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="card__img"><img src="img/price/4.jpg" alt=""></div>
+                        <!-- /.card__img -->
+                        <div class="card__text">
+                            <h4 class="card__title">Ремонт в новостройках</h4>
+                            <!-- /.card__title -->
+                            <a href="#" class="card__link">Узнать цены</a>
+                            <!-- /.card-link -->
+                        </div>
+                        <!-- /.card__text -->
+                    </div>
+                    <!-- /.card -->
+                    <div class="card price__card wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="card__img"><img src="img/price/5.jpg" alt=""></div>
+                        <!-- /.card__img -->
+                        <div class="card__text">
+                            <h4 class="card__title">Ремонт кухонь</h4>
+                            <!-- /.card__title -->
+                            <a href="#" class="card__link">Узнать цены</a>
+                            <!-- /.card-link -->
+                        </div>
+                        <!-- /.card__text -->
+                    </div>
+                    <!-- /.card -->
+                    <div class="card price__card wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="card__img"><img src="img/price/6.jpg" alt=""></div>
+                        <!-- /.card__img -->
+                        <div class="card__text">
+                            <h4 class="card__title">Ремонт дач и коттетджей</h4>
+                            <!-- /.card__title -->
+                            <a href="#" class="card__link">Узнать цены</a>
+                            <!-- /.card-link -->
+                        </div>
+                        <!-- /.card__text -->
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.cards -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section price -->
+        <section class="section steps">
+            <div class="container">
+                <h2 class="steps-title">Наши специалисты готовы выехать на замер в любое удобное для Вас время</h2>
+                <!-- /.steps-title -->
+                <span class="steps-subtitle">5 шагов до ремонта</span>
+                <!-- /.steps-subtitle -->
+                <div class="steps-block">
+                    <div class="step wow fadeInDownBig">
+                        <div class="step__img">
+                            <img src="img/steps/woman.png" alt="woman">
+                        </div>
+                        <!-- /.step__img -->
+                        <p class="step__text">Вы звоните нам <br> или оставляете заявку</p>
+                        <!-- /.step__text -->
+                    </div>
+                    <!-- /.step -->
+                    <div class="step wow fadeInDownBig" data-wow-delay="0.1s">
+                        <div class="step__img">
+                            <img src="img/steps/wall-clock.png" alt="wall-clock">
+                        </div>
+                        <!-- /.step__img -->
+                        <p class="step__text">Согласуем удобное <br> для Вас время выезда специалиста на замер</p>
+                        <!-- /.step__text -->
+                    </div>
+                    <!-- /.step -->
+                    <div class="step wow fadeInDownBig" data-wow-delay="0.2s">
+                        <div class="step__img">
+                            <img src="img/steps/money.png" alt="money">
+                        </div>
+                        <!-- /.step__img -->
+                        <p class="step__text">Рассчитываем смету согласовываем <br> с Вами</p>
+                        <!-- /.step__text -->
+                    </div>
+                    <!-- /.step -->
+                    <div class="step wow fadeInDownBig" data-wow-delay="0.3s">
+                        <div class="step__img">
+                            <img src="img/steps/document.png" alt="document">
+                        </div>
+                        <!-- /.step__img -->
+                        <p class="step__text">Подписываем договор закупаем материал <br> по оптовым ценам</p>
+                        <!-- /.step__text -->
+                    </div>
+                    <!-- /.step -->
+                    <div class="step wow fadeInDownBig" data-wow-delay="0.4s">
+                        <div class="step__img">
+                            <img src="img/steps/calendar.png" alt="calendar">
+                        </div>
+                        <!-- /.step__img -->
+                        <p class="step__text">Выполняем ремонт <br> в указанные сроки</p>
+                        <!-- /.step__text -->
+                    </div>
+                    <!-- /.step -->
+                </div>
+                <!-- /.steps-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section steps -->
+        <section class="section warranty">
+            <div class="container">
+                <div class="warranty-block">
+                    <span class="warranty__text"> Ремонт обойдётся Вам дешевле, так как <br> мы используем качественные материалы по оптовым ценам</span>
+                    <!-- /.warranty-text -->
+                </div>
+                <!-- /.warranty-block -->
+                
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section warranty -->
     </main>
     <div class="modal" id="modal">
         <div class="modal-dialog">
@@ -230,9 +388,11 @@
     <!-- <script src="js/main.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/slick.min.js"></script>
     <script>
+        new WOW().init();
         $(document).ready(function(){
             $('.slider').slick({
                 slidesToShow: 3,
