--- a/src/index.html
+++ b/src/index.html
@@ -353,13 +353,14 @@
                             <!-- /.interview-list -->
                         </div>
                         <!-- /.interview brif__interview -->
-                        <form action="" class="brif__form">
+                        <form action="" class="brif__form" id="brif-form">
                             <div class="form-wrap">
                                     <h3 class="form__title">Оставьте заявку на бесплатный расчёт ремонта по телефону</h3>
                                     <span class="form__subtitle">Для этого заполните форму ниже</span>
                                     <form action="#">
-                                        <input type="text" class="input brif__input" placeholder="Ваше имя" required>
-                                        <input type="tel" class="input brif__input" placeholder="Ваш телефон" required>
+                                        <input type="text" name="username" class="input brif__input" placeholder="Ваше имя" >
+                                        <input type="tel" name="phone" class="input brif__input phone" placeholder="Ваш телефон" >
+                                        <input type="email" name="email" class="input brif__input" placeholder="Ваш Email" >
                                         <button class="button brif__button">Рассчитать стоимость</button>
                                         <span class="form__description">Мы перезвоним Вам в течение 60 секунд</span>
                                     </form>
@@ -489,9 +490,38 @@
         <script src="js/wow.min.js"></script>
         <script src="js/modal.js"></script>
         <script src="js/slick.min.js"></script>
+        <script src="js/jquery.validate.min.js"></script>
+        <script src="js/jquery.maskedinput.min.js"></script>
         <script>
             new WOW().init();
             $(document).ready(function () {
+                $('#brif-form').validate({
+                    rules: {
+                        username: {
+                            required: true,
+                            minlength: 2
+                        },
+                        email: {
+                            required: true,
+                            email: true,
+                        },
+                        phone: {
+                            required: true,
+                        }
+                    },
+                    messages: {
+                        username:{
+                            required: "Укажите имя",
+                            minlength: jQuery.validator.format("Минимальное количество символов: {0}"),
+                        },
+                        email:{
+                            required: "Нам нужен ваш email",
+                            email: "Введите корректный email"
+                        } ,
+                        phone: "Укажите телефон"
+                    }
+                });
+                $('.phone').mask('8 (999) 999-99-99')
                 $('.slider').slick({
                     slidesToShow: 3,
                     slidesToScroll: 1,
