pixel-perfect (part1)

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://yastatic.net/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/animate.css">
@@ -87,7 +86,7 @@
                         <!-- /.section-title -->
                         <span class="offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
                         <!-- /.section-subtitle -->
-                        <form action="" id="offer-form" class="form offer__form" onsubmit="ym(54893842, 'reachGoal', 'send-numb'); return true;">
+                        <form action="" id="offer-form" class="form offer__form" >
                             <input
                                 type="text"
                                 name="username"
@@ -369,7 +368,7 @@
                                 <!-- /.interview-list__item -->
                                 <li class="interview-list__item">
                                     <span class="interview-list__counter">2.</span>
-                                    <span class="interview-list__text">У вас новостройка или вторичное жильё?</span>
+                                    <span class="interview-list__text">У Вас новостройка или вторичное жильё?</span>
                                 </li>
                                 <!-- /.interview-list__item -->
                                 <li class="interview-list__item">
