--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
                             <div class="card__text">
                                 <h4 class="card__title card__title-bath">Ремонт ванных комнат и с/у</h4>
                                 <!-- /.card__title -->
-                                <a href="#" class="card__link">Узнать цены</a>
+                                <a href="#" class="card__link card__link-bath">Узнать цены</a>
                                 <!-- /.card-link -->
                             </div>
                             <!-- /.card__text -->
@@ -182,7 +182,7 @@
                             <div class="card__text">
                                 <h4 class="card__title card__title-room">Ремонт комнат и квартир</h4>
                                 <!-- /.card__title -->
-                                <a href="#" class="card__link">Узнать цены</a>
+                                <a href="#" class="card__link card__link-room">Узнать цены</a>
                                 <!-- /.card-link -->
                             </div>
                             <!-- /.card__text -->
@@ -192,9 +192,9 @@
                             <div class="card__img"><img src="img/price/3.jpg" alt=""></div>
                             <!-- /.card__img -->
                             <div class="card__text card__title-office">
-                                <h4 class="card__title">Отделка офисных помещений</h4>
+                                <h4 class="card__title card__title-office">Отделка офисных помещений</h4>
                                 <!-- /.card__title -->
-                                <a href="#" class="card__link">Узнать цены</a>
+                                <a href="#" class="card__link card__link-office">Узнать цены</a>
                                 <!-- /.card-link -->
                             </div>
                             <!-- /.card__text -->
@@ -206,7 +206,7 @@
                             <div class="card__text">
                                 <h4 class="card__title card__title-building">Ремонт в новостройках</h4>
                                 <!-- /.card__title -->
-                                <a href="#" class="card__link">Узнать цены</a>
+                                <a href="#" class="card__link card__link-building">Узнать цены</a>
                                 <!-- /.card-link -->
                             </div>
                             <!-- /.card__text -->
@@ -218,7 +218,7 @@
                             <div class="card__text">
                                 <h4 class="card__title card__title-kitchen">Ремонт кухонь</h4>
                                 <!-- /.card__title -->
-                                <a href="#" class="card__link">Узнать цены</a>
+                                <a href="#" class="card__link card__link-kitchen">Узнать цены</a>
                                 <!-- /.card-link -->
                             </div>
                             <!-- /.card__text -->
@@ -228,9 +228,9 @@
                             <div class="card__img"><img src="img/price/6.jpg" alt=""></div>
                             <!-- /.card__img -->
                             <div class="card__text">
-                                <h4 class="card__title card__title-country">Ремонт дач и коттетджей</h4>
+                                <h4 class="card__title card__title-country">Ремонт дач и коттеджей</h4>
                                 <!-- /.card__title -->
-                                <a href="#" class="card__link">Узнать цены</a>
+                                <a href="#" class="card__link card__link-country">Узнать цены</a>
                                 <!-- /.card-link -->
                             </div>
                             <!-- /.card__text -->
@@ -249,56 +249,56 @@
                     <span class="steps-subtitle">5 шагов до ремонта</span>
                     <!-- /.steps-subtitle -->
                     <div class="steps-block">
-                        <div class="step wow fadeInDownBig">
-                            <div class="step__img">
+                        <div class="step wow fadeInDownBig step-woman">
+                            <div class="step__img step_img-woman">
                                 <img src="img/steps/woman.png" alt="woman">
                             </div>
                             <!-- /.step__img -->
-                            <p class="step__text">Вы звоните нам
+                            <p class="step__text step__text-woman">Вы звоните нам
                                 <br>
                                 или оставляете заявку</p>
                             <!-- /.step__text -->
                         </div>
                         <!-- /.step -->
-                        <div class="step wow fadeInDownBig" data-wow-delay="0.1s">
-                            <div class="step__img">
+                        <div class="step wow fadeInDownBig step-clock" data-wow-delay="0.1s">
+                            <div class="step__img step__img-clock">
                                 <img src="img/steps/wall-clock.png" alt="wall-clock">
                             </div>
                             <!-- /.step__img -->
-                            <p class="step__text">Согласуем удобное
+                            <p class="step__text step__text-clock">Согласуем удобное
                                 <br>
                                 для Вас время выезда специалиста на замер</p>
                             <!-- /.step__text -->
                         </div>
                         <!-- /.step -->
-                        <div class="step wow fadeInDownBig" data-wow-delay="0.2s">
-                            <div class="step__img">
+                        <div class="step wow fadeInDownBig step-money" data-wow-delay="0.2s">
+                            <div class="step__img step__img-money">
                                 <img src="img/steps/money.png" alt="money">
                             </div>
                             <!-- /.step__img -->
-                            <p class="step__text">Рассчитываем смету согласовываем
+                            <p class="step__text step__text-money">Рассчитываем смету согласовываем
                                 <br>
                                 с Вами</p>
                             <!-- /.step__text -->
                         </div>
                         <!-- /.step -->
-                        <div class="step wow fadeInDownBig" data-wow-delay="0.3s">
-                            <div class="step__img">
+                        <div class="step wow fadeInDownBig step-document" data-wow-delay="0.3s">
+                            <div class="step__img step__img-document">
                                 <img src="img/steps/document.png" alt="document">
                             </div>
                             <!-- /.step__img -->
-                            <p class="step__text">Подписываем договор закупаем материал
+                            <p class="step__text step__text-document">Подписываем договор закупаем материал
                                 <br>
                                 по оптовым ценам</p>
                             <!-- /.step__text -->
                         </div>
                         <!-- /.step -->
-                        <div class="step wow fadeInDownBig" data-wow-delay="0.4s">
-                            <div class="step__img">
+                        <div class="step wow fadeInDownBig step-calendar" data-wow-delay="0.4s">
+                            <div class="step__img step__img-calendar">
                                 <img src="img/steps/calendar.png" alt="calendar">
                             </div>
                             <!-- /.step__img -->
-                            <p class="step__text">Выполняем ремонт
+                            <p class="step__text step__text-calendar">Выполняем ремонт
                                 <br>
                                 в указанные сроки</p>
                             <!-- /.step__text -->
@@ -392,12 +392,12 @@
                             <ul class="interview-list">
                                 <li class="interview-list__item">
                                     <span class="interview-list__counter">1.</span>
-                                    <span class="interview-list__text">Какова площадь помещения?</span>
+                                    <span class="interview-list__text interview-list__text_first">Какова площадь помещения?</span>
                                 </li>
                                 <!-- /.interview-list__item -->
                                 <li class="interview-list__item">
                                     <span class="interview-list__counter">2.</span>
-                                    <span class="interview-list__text">У Вас новостройка или вторичное жильё?</span>
+                                    <span class="interview-list__text interview-list__text_second">У Вас новостройка или вторичное жильё?</span>
                                 </li>
                                 <!-- /.interview-list__item -->
                                 <li class="interview-list__item">
@@ -407,7 +407,7 @@
                                 <!-- /.interview-list__item -->
                                 <li class="interview-list__item">
                                     <span class="interview-list__counter">4.</span>
-                                    <span class="interview-list__text">Назначение помещения?</span>
+                                    <span class="interview-list__text interview-list__text_forth">Назначение помещения?</span>
                                 </li>
                                 <!-- /.interview-list__item -->
                             </ul>
