Все изображения - jpg. Как надо

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                         </div>
                         <!-- /.hero-item -->
                         <div class="hero-img wow slideInRight">
-                            <img src="img/hero-img.png" alt="План квартиры">
+                            <img src="img/hero-img.jpg" alt="План квартиры">
                         </div>
                         <!-- /.hero-img -->
                     </div>
